# WASMCMakeBoilerplate

./: .gitignore  CMakeLists.txt  TestWASM.js  test.cpp
